Añadiendo y cambiando estructura HTML

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,93 +17,16 @@
 <div class="container-fluid fullscreen-section position-relative bg-color-home-inverted">
 
   <!-- SECTION -->
-  <div class="row position-absolute top-25 start-50 translate-middle">
-    <div class="row justify-content-center m-auto">
-      <div class="col-auto">
-        <h1 class="text-center fw-bolder">Bienvenido a <span class="text-color">Insinia</span></h1>
+  <div class="container position-absolute top-25">
+    <div class="row justify-content-center">
+      <div class="col-lg-6">
+          <h1 class="text-white mb-4">Bienvenido a Inisnia</h1>
+          <p class="text-white pb-3">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
+          <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3">Comienza</a>
+          <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill">Contactanos</a>
       </div>
-    </div>
-    <div class="row justify-content-center m-auto mt-1">
-      <div class="col-auto">
-        <h4 class="text-center fw-bolder">La herramienta definitiva para crear Rankings</h4>
-      </div>
-    </div>
-    <div class="row justify-content-center m-auto mt-3">
-      <div class="col-auto">
-        <button class="btn btn-color text-light rounded-pill px-4">¡Empezamos!</button>
-      </div>
-    </div>
-  </div>
-
-  <div class="row col-10 position-absolute top-60 start-50 translate-middle bg-color rounded py-2">
-
-    <div class="col-6">
-      <div class="card bg-color border-0 shadow-sm">
-        <div class="card-body pb-0 border-bottom border-color text-color table-responsive">
-          <table class="table table-borderless table-hover">
-            <thead class="bg-color text-light">
-              <tr class="border-bottom border-color">
-                <th>#</th>
-                <th>Nombre</th>
-                <th>Apellido</th>
-                <th>Puntos</th>
-              </tr>
-            </thead>
-            <tbody>
-              <tr>
-                <th>1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>340</td>
-              </tr>
-              <tr>
-                <th>2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>290</td>
-              </tr>
-              <tr>
-                <th>3</th>
-                <td>Larry</td>
-                <td>Jackson</td>
-                <td>255</td>
-              </tr>
-            </tbody>
-          </table>
-        </div>
-      </div>
-    </div>
-
-    <div class="col-6 my-2">
-      <div class="row text-center text-light">
-        <h5>¡Empieza a crear Rankings ya!</h5>
-      </div>
-      <div class="row bg-light">
-        
-      </div>
-      <div class="row bg-light">
-        
-      </div>
-    </div>
-
-  </div>
-
-</div>
-
-<!-- SECTION CONTAINER -->
-<div class="container-fluid fullscreen-section bg-color">
-
-  <!-- SECTION -->
-  <div class="row pt-5">
-    <div class="row justify-content-center m-auto">
-      <h1 class="text-center fw-bolder">Bienvenido a <span class="text-color">Insinia</span></h1>
-    </div>
-    <div class="row justify-content-center m-auto mt-1">
-      <h4 class="text-center fw-bolder">La herramienta definitiva para crear Rankings</h4>
-    </div>
-    <div class="row justify-content-center m-auto mt-3">
-      <div class="col-auto">
-        <button class="btn btn-color text-light rounded-pill px-4">¡Empezamos!</button>
+      <div class="col-lg-6 text-center justify-content-center align-items-center text-lg-start">
+          <img class="img-fluid home-hero" src="../../assets/img/hero.png" alt="">
       </div>
     </div>
   </div>
