--- a/src/app/about/about.component.css
+++ b/src/app/about/about.component.css
@@ -27,7 +27,7 @@
 
 .body {
   width: 100%;
-  height: 100%;
+  height: 150vh;
   background: linear-gradient(0deg, rgb(140, 87, 253) 0%, rgba(0, 0, 0, 0) 90%);
   position: absolute;
 }
