Cambiando estructura de Home para crear la interfaz final

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,21 +14,76 @@
   </div>
 
 <!-- SECTION CONTAINER -->
-<div class="container-fluid fullscreen-section position-relative bg-color-home-inverted">
+<div class="container-fluid fullscreen-section">
 
-  <!-- SECTION -->
-  <div class="container position-absolute top-25">
     <div class="row justify-content-center">
-      <div class="col-lg-6">
-          <h1 class="text-white mb-4">Bienvenido a Inisnia</h1>
-          <p class="text-white pb-3">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
-          <a href="" class="btn btn-secondary py-sm-3 px-sm-5 rounded-pill me-3">Comienza</a>
-          <a href="" class="btn btn-light py-sm-3 px-sm-5 rounded-pill">Contactanos</a>
+      <div class="col-md-5">
+        <img class="img-fluid home-hero" src="../../assets/png/tasks.png" alt="">
       </div>
-      <div class="col-lg-6 text-center justify-content-center align-items-center text-lg-start">
-          <img class="img-fluid home-hero" src="../../assets/img/hero.png" alt="">
+      <div class="col-md-5 text-start align-self-center pt-5">
+          <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
+          <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
+          <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
+          <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill me-2">Comienza</a>
+          <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill">Contáctanos</a>
+      </div>
+
+    </div>
+</div>
+
+<div class="container-fluid fullscreen-section">
+
+  <div class="row">
+    <div class="col">
+      <div class="card-custom text-light">
+        <div class="card-body m-0 p-0">
+          <div class="row g-0">
+            <div class="col-6 ps-5 align-self-center">
+              <h2>Queremos solventar una necesidad</h2>
+              <h3>Por ello, ofrecemos lo siguiente:</h3>
+              <h4>· Colaboración</h4>
+              <h4>· Organización</h4>
+              <h4>· Facilidad de uso</h4>
+            </div>
+            <div class="col-6 text-end">
+              <img class="img-fluid home-hero" src="../../assets/png/colaboration.png">
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
 
+  <div class="row gap-2 mt-4">
+    <div class="col">
+      <div class="card-custom text-light">
+        <div class="card-body m-0 p-0">
+          <div class="row g-0">
+            <div class="col-6 ps-4 align-self-center">
+              <h2>Organización</h2>
+              <h3>Una genial manera de manejar organizar, cambiar y editar.</h3>
+            </div>
+            <div class="col-6 text-end">
+              <img class="img-fluid home-hero" src="../../assets/png/manage.png">
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="card-custom text-light">
+        <div class="card-body m-0 p-0">
+          <div class="row g-0">
+            <div class="col-6 text-end">
+              <img class="img-fluid home-hero" src="../../assets/png/colaboration_group.png">
+            </div>
+            <div class="col-6 ps-4 align-self-center">
+              <h2>Colaboracion</h2>
+              <h3>La colaboracion es uno de los aspectos a destacar.</h3>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
 </div>
