Cambios en el navbar y en elementos card-body

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,42 +1,39 @@
   
-  <!-- NAVBAR SUPERIOR -->
-  <div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
-    <div class="p-2">
-      <img src="../../assets/insinia.png" width="30">
-    </div>
-    <div class="p-2">
-      <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Home</a>
-      <a href="/documentation" class="mx-2 link-color text-decoration-none">Test</a>
-      <a href="/register" class="mx-2 link-color text-decoration-none">Lorem</a>
-      <a href="/login" class="mx-2 link-color text-decoration-none">Ipsum</a>
-    </div>
-    <div class="p-2">Login</div>
+<!-- NAVBAR SUPERIOR -->
+<div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
+  <div>
+    <img src="../../assets/insinia.png" width="30">
   </div>
+  <div>
+    <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Home</a>
+    <a href="/documentation" class="mx-2 link-color text-decoration-none">Test</a>
+    <a href="/register" class="mx-2 link-color text-decoration-none">Lorem</a>
+    <a href="/login" class="mx-2 link-color text-decoration-none">Ipsum</a>
+  </div>
+  <div class="text-color">Login</div>
+</div>
 
 <!-- SECTION CONTAINER -->
 <div class="container-fluid fullscreen-section">
-
     <div class="row justify-content-center">
       <div class="col-md-5">
         <img class="img-fluid home-hero" src="../../assets/png/tasks.png" alt="">
       </div>
-      <div class="col-md-5 text-start align-self-center pt-5">
+      <div class="col-md-4 text-start align-self-center pt-5">
           <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
           <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
           <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
           <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill me-2">Comienza</a>
           <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill">Contáctanos</a>
       </div>
-
     </div>
 </div>
 
 <div class="container-fluid fullscreen-section">
-
   <div class="row">
     <div class="col">
       <div class="card-custom text-light">
-        <div class="card-body m-0 p-0">
+        <div class="card-body">
           <div class="row g-0">
             <div class="col-6 ps-5 align-self-center">
               <h2>Queremos solventar una necesidad</h2>
@@ -53,11 +50,10 @@
       </div>
     </div>
   </div>
-
   <div class="row gap-2 mt-4">
     <div class="col">
       <div class="card-custom text-light">
-        <div class="card-body m-0 p-0">
+        <div class="card-body">
           <div class="row g-0">
             <div class="col-6 ps-4 align-self-center">
               <h2>Organización</h2>
@@ -72,14 +68,14 @@
     </div>
     <div class="col">
       <div class="card-custom text-light">
-        <div class="card-body m-0 p-0">
+        <div class="card-body">
           <div class="row g-0">
             <div class="col-6 text-end">
               <img class="img-fluid home-hero" src="../../assets/png/colaboration_group.png">
             </div>
             <div class="col-6 ps-4 align-self-center">
-              <h2>Colaboracion</h2>
-              <h3>La colaboracion es uno de los aspectos a destacar.</h3>
+              <h2>Colaboración</h2>
+              <h3>La colaboracion es uno de nuestros lemas.</h3>
             </div>
           </div>
         </div>
