--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -1,6 +1,30 @@
-.backgroundBody {
-  width: 100%;
-  height: 150vh;
-  background: linear-gradient(0deg, rgb(140, 87, 253) 0%, rgba(0, 0, 0, 0) 90%);
-  position: absolute;
+
+
+
+#avatar{
+  background-color: black;
+  width : 10rem;
+  height:10rem;
+  margin-left:2vw ;
+}
+
+.rankings-container{
+height: 50vh;
+width: 40vw;
+}
+
+.filter-icons{
+width: 2rem;
+height: 2rem;
+}
+
+.destacados{
+  height: 50vh;
+  overflow-y: auto;
+}
+
+.nombre-ranking{
+  color: white;
+  font-size: xx-large;
+  
 }
