Añadiendo mas elementos y creando estructura. Añadiendo footer, apartado navegadores y distintos elementos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,8 @@
   
 <!-- NAVBAR SUPERIOR -->
 <div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
-  <div>
-    <img src="../../assets/insinia.png" width="30">
+  <div class="ms-2">
+    <p class="text-color">Insinia</p>
   </div>
   <div>
     <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Home</a>
@@ -10,37 +10,40 @@
     <a href="/register" class="mx-2 link-color text-decoration-none">Lorem</a>
     <a href="/login" class="mx-2 link-color text-decoration-none">Ipsum</a>
   </div>
-  <div class="text-color">Login</div>
+  <div class="me-2">
+    <p class="text-color">Login</p>
+  </div>
 </div>
 
 <!-- SECTION CONTAINER -->
 <div class="container-fluid fullscreen-section">
-    <div class="row justify-content-center">
-      <div class="col-md-5">
-        <img class="img-fluid home-hero" src="../../assets/png/tasks.png" alt="">
-      </div>
-      <div class="col-md-4 text-start align-self-center pt-5">
-          <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
-          <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
-          <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
-          <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill me-2">Comienza</a>
-          <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill">Contáctanos</a>
-      </div>
+  <div class="row position-relative top-20 justify-content-center">
+    <div class="col-4 text-end">
+      <img class="img-fluid home-hero" src="../../assets/png/tasks.png" alt="">
     </div>
+    <div class="col-4 text-start align-self-center pt-5">
+        <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
+        <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta</p>
+        <p class="text-color mb-1">definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
+        <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
+        <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill shadow-sm me-2">Comienza</a>
+        <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill shadow-sm">Contáctanos</a>
+    </div>
+  </div>
 </div>
 
 <div class="container-fluid fullscreen-section">
   <div class="row">
     <div class="col">
-      <div class="card-custom text-light">
+      <div class="card-custom shadow-sm text-light">
         <div class="card-body">
-          <div class="row g-0">
+          <div class="row">
             <div class="col-6 ps-5 align-self-center">
               <h2>Queremos solventar una necesidad</h2>
-              <h3>Por ello, ofrecemos lo siguiente:</h3>
-              <h4>· Colaboración</h4>
-              <h4>· Organización</h4>
-              <h4>· Facilidad de uso</h4>
+              <h4>Por ello, ofrecemos lo siguiente:</h4>
+              <h5 class="mt-4">· Colaboración</h5>
+              <h5>· Organización</h5>
+              <h5>· Facilidad de uso</h5>
             </div>
             <div class="col-6 text-end">
               <img class="img-fluid home-hero" src="../../assets/png/colaboration.png">
@@ -52,7 +55,7 @@
   </div>
   <div class="row gap-2 mt-4">
     <div class="col">
-      <div class="card-custom text-light">
+      <div class="card-custom shadow-sm text-light">
         <div class="card-body">
           <div class="row g-0">
             <div class="col-6 ps-4 align-self-center">
@@ -67,7 +70,7 @@
       </div>
     </div>
     <div class="col">
-      <div class="card-custom text-light">
+      <div class="card-custom shadow-sm text-light">
         <div class="card-body">
           <div class="row g-0">
             <div class="col-6 text-end">
@@ -81,5 +84,28 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+
+<div class="container-fluid fullscreen-section">
+  <div class="container-fluid fullscreen-section">
+    <div class="row position-relative top-25 justify-content-center">
+      <div class="col-8 text-center align-self-center pt-5">
+          <h1 class="text-color mb-2">Disponible para los navegadores</h1>
+          <p class="text-small text-muted-color mb-3">Utilizar las ultimas versiones de estos navegadores</p>
+          <a href="https://brave.com/es/download/"><img src="../../assets/brave.png" class="mx-3 browser" width="50" alt="brave icon"></a>
+          <a href="https://www.opera.com/es/download"><img src="../../assets/opera.png" class="mx-3 browser" width="50" alt="opera icon"></a>
+          <a href="https://www.google.com/intl/es/chrome"><img src="../../assets/chrome.png" class="mx-3 browser" width="50" alt="chrome icon"></a>
+          <a href="https://www.mozilla.org/es-ES/firefox/new/"><img src="../../assets/firefox.png" class="mx-3 browser" width="50" alt="firefox icon"></a>
+          <a href="https://www.microsoft.com/es-es/edge"><img src="../../assets/edge.png" class="mx-3 browser" width="50" alt="edge icon"></a>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="container-fluid">
+  <div class="text-center text-color">
+    <p class="mb-1">Desarrollado por Insinia</p>
+    <p class="text-small text-muted-color">2022 © Insinia. Todos los derechos reservados.</p>
   </div>
 </div>
