--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -11,7 +11,7 @@
       <a href="/register" class="mx-2 link-color text-decoration-none">Usuarios</a>
       <a href="/login" class="mx-2 link-color text-decoration-none">Ajustes</a>
     </div>
-    <div class="p-2">Perfil</div>
+    <div class="p-2">Salir</div>
   </div>
   <div class="row"style="margin-top: 1%; width: 100%;"> 
   </div>
@@ -26,25 +26,93 @@
         'background': 'url(' +avatar + ') no-repeat 0 0 / cover'        
       }"
     ></div>
+    <div class="col-5">
+    </div>
+  </div>
+       <!--    CONTENEDOR RANKING  -->
+<div class="row d-flex justify-content-center " >
+  <!--    CONTENEDOR RANKING /  FILTRO -->
 
-<!--     CONTENEDOR DESTACADOS -->
-<section class="detacados ">
- <div class="row" style="height: 10vh;"></div>
- <div class="row d-flex justify-content-center " style="overflow-y: auto;">
- <div class="col-5 bg-white " style="width: 70vw; height: 40vh;margin-bottom: 10%;">
+   <div class="row d-flex justify-content-center " style="height: 10vh;"></div>
+  
+   <div class="col-7" style="width: 60rem; margin-bottom: 5rem;" >
+   <div class="row d-flex justify-content-center "style="height: 5vh;" >
+   <div class="col-5 bg-white " style="width: 70vw; height: 0vh;margin-bottom: 10%;">
+    <div class="row">
+  <div class="col-12 d-flex justify-content-center mb-4">
+    <div class="dropdown" mdbDropdown>
+
+      <button mdbDropdownToggle mdbBtn color="primary" class="dropdown-toggle waves-light" type="button"
+        mdbWavesEffect>
+        Dropdown primary
+      </button>
+    
+      <div class="dropdown-menu dropdown-primary">
+        <a class="dropdown-item" href="#">Action</a>
+        <a class="dropdown-item" href="#">Another action</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+        <a class="dropdown-item" href="#">Something else here</a>
+      </div>
+    </div>
+  </div>
+  </div>
+  </div>
+  </div>
+  <!--     CONTENEDOR RANKING / LISTA NOTIFICACIONES -->
+  <div class="container  " style="overflow-y: auto;height: 40vh;" >
+  <div   *ngFor="let item of rankings">
+  
+  <div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" style="overflow-y: auto;">
+    
+   
+    <div class="row d-flex justify-content-center">
+    <div class="col d-flex justify-content-center"style="width: 5rem; height: 5rem;" ><img class="img-fluid home-hero" src="{{item.imagen}}" alt=""></div>
+  </div>
+  
+  <div class="row d-flex justify-content-center">
+    <div class="col-12 nombre-ranking d-flex justify-content-center">{{item.nombre}}</div>
+  
+  </div>
+    <div class="row ">
+      <div class="col nombre-ranking d-flex justify-content-center">{{item.tipo}}</div>
+    </div>
+  
+    <div class="row " *ngIf="item.total!=null">
+      <div class="col nombre-ranking d-flex justify-content-center">Hay {{item.total}} personas</div>
+    </div>
+  
+  
+  
+  </div>
+  
+  <br>
+  </div>
+  </div>
+  
+</div>
+
+<div class="col-2"></div>
+    <!--    CONTENEDOR DESTACADOS  -->
+<div class="col-3 " style="width: 30rem;">
+<!--    CONTENEDOR DESTACADOS /  FILTRO -->
+
+ 
+ <div class="row d-flex justify-content-center "style="height: 5vh;" >
+ <div class="col-5 bg-white " style="width: 70vw; height: 0vh;margin-bottom: 50rem;">
   <div class="row">
 <div class="col-12 d-flex justify-content-center mb-4">
-  <div class="col-1 filter-icons mx-2" ><img class="img-fluid home-hero" src="../../assets/png/world-outline-badged.png" alt=""></div>
-  <div class="col-1 filter-icons mx-2" ><img class="img-fluid home-hero" src="../../assets/png/ranking.png" alt=""></div>
-  <div class="col-1 filter-icons mx-2" ><img class="img-fluid home-hero" src="../../assets/png/medal-outline.png" alt=""></div>
-
+  <div class="col-1 filter-icons mx-2" style="cursor: pointer;"><img class="img-fluid home-hero" src="../../assets/png/world-outline-badged.png" alt=""></div>
+  <div class="col-1 filter-icons mx-2" style="cursor: pointer;" ><img class="img-fluid home-hero" src="../../assets/png/ranking.png" alt=""></div>
+  <div class="col-1 filter-icons mx-2" style="cursor: pointer;"><img class="img-fluid home-hero" src="../../assets/png/medal-outline.png" alt=""></div>
 </div>
 </div>
-<!--     CONTENEDOR DESTACADOS/ LISTA NOTIFICACIONES -->
-
+</div>
+</div>
+<!--     CONTENEDOR DESTACADOS / LISTA NOTIFICACIONES -->
+<div class="container " style="overflow-y: auto;height: 40vh;" >
 <div   *ngFor="let item of rankings">
 
-<div class="row bg-black d-flex justify-content-center " style="width: 100%; height: 40vh;">
+<div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" style="overflow-y: auto;">
   
  
   <div class="row d-flex justify-content-center">
@@ -59,7 +127,9 @@
     <div class="col nombre-ranking d-flex justify-content-center">{{item.tipo}}</div>
   </div>
 
-
+  <div class="row " *ngIf="item.total!=null">
+    <div class="col nombre-ranking d-flex justify-content-center">Hay {{item.total}} personas</div>
+  </div>
 
 
 
@@ -69,7 +139,9 @@
 </div>
 </div>
 
- </div>
- </section>
+ 
+
+</div>
+</div>
   <div class="row" style="height: 48vh;"></div>
 
