--- a/src/styles.css
+++ b/src/styles.css
@@ -118,3 +118,5 @@
 .start-75 {
     left: 75% !important;
 }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
