--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -35,34 +35,39 @@
 
    <div class="row d-flex justify-content-center " style="height: 10vh;"></div>
   
-   <div class="col-7" style="width: 60rem; margin-bottom: 5rem;" >
+   <div class="col-7" style="width: 60rem; margin-bottom: 5rem;"  >
    <div class="row d-flex justify-content-center "style="height: 5vh;" >
    <div class="col-5 bg-white " style="width: 70vw; height: 0vh;margin-bottom: 10%;">
     <div class="row">
-  <div class="col-12 d-flex justify-content-center mb-4">
-    <div class="dropdown" mdbDropdown>
-
-      <button mdbDropdownToggle mdbBtn color="primary" class="dropdown-toggle waves-light" type="button"
-        mdbWavesEffect>
-        Dropdown primary
-      </button>
-    
-      <div class="dropdown-menu dropdown-primary">
-        <a class="dropdown-item" href="#">Action</a>
-        <a class="dropdown-item" href="#">Another action</a>
-        <a class="dropdown-item" href="#">Something else here</a>
-        <a class="dropdown-item" href="#">Something else here</a>
+  <div class="col-12 d-flex justify-content-center mb-4" style="margin-top: -2%;">
+   
+    <nav class="navbar navbar-expand-sm navbar-light bg-light">
+      <div class="container-fluid">
+         
+          <div id="navbarCollapse" class="collapse navbar-collapse">
+              <ul class="nav navbar-nav">
+                   <li class="nav-item dropdown">
+                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Messages</a>
+                      <div class="dropdown-menu"   *ngFor="let item of rankings">
+                          <a href="#" class="dropdown-item">{{item.nombre}}</a>                   
+                      </div>
+                  </li>
+              </ul>
+              
+          </div>
       </div>
-    </div>
+  </nav>
+    
   </div>
   </div>
   </div>
   </div>
+  
   <!--     CONTENEDOR RANKING / LISTA NOTIFICACIONES -->
   <div class="container  " style="overflow-y: auto;height: 40vh;" >
   <div   *ngFor="let item of rankings">
   
-  <div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" style="overflow-y: auto;">
+  <div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" >
     
    
     <div class="row d-flex justify-content-center">
@@ -112,7 +117,7 @@
 <div class="container " style="overflow-y: auto;height: 40vh;" >
 <div   *ngFor="let item of rankings">
 
-<div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" style="overflow-y: auto;">
+<div class="row bg-black d-flex justify-content-center  rounded" style="width: 105%; height: 20vh;" >
   
  
   <div class="row d-flex justify-content-center">
@@ -123,6 +128,7 @@
   <div class="col-12 nombre-ranking d-flex justify-content-center">{{item.nombre}}</div>
 
 </div>
+<br>
   <div class="row ">
     <div class="col nombre-ranking d-flex justify-content-center">{{item.tipo}}</div>
   </div>
