--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,153 +1,191 @@
-
-  
-  <!-- NAVBAR SUPERIOR -->
-  <div class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur">
-    <div class="p-2">
-      <img src="../../assets/insinia.png" width="30">
-    </div>
-    <div class="p-2">
-      <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder">Rankings</a>
-      <a href="/documentation" class="mx-2 link-color text-decoration-none">Supervisores</a>
-      <a href="/register" class="mx-2 link-color text-decoration-none">Usuarios</a>
-      <a href="/login" class="mx-2 link-color text-decoration-none">Ajustes</a>
-    </div>
-    <div class="p-2">Salir</div>
+<!-- NAVBAR SUPERIOR -->
+<div
+  class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur"
+>
+  <div class="p-2">
+    <img src="../../assets/insinia.png" width="30" />
   </div>
-  <div class="row"style="margin-top: 1%; width: 100%;"> 
+  <div class="p-2">
+    <a href="/home" class="mx-2 link-color text-decoration-none fw-bolder"
+      >Rankings</a
+    >
+    <a href="/documentation" class="mx-2 link-color text-decoration-none"
+      >Supervisores</a
+    >
+    <a href="/register" class="mx-2 link-color text-decoration-none"
+      >Usuarios</a
+    >
+    <a href="/login" class="mx-2 link-color text-decoration-none">Ajustes</a>
   </div>
-    
+  <div class="p-2">Salir</div>
+</div>
+<div class="row" style="margin-top: 1%; width: 100%"></div>
 
 <!-- AVATAR -->
-  <div class="row container-fluid ">
-    <div
-      id="avatar"
-      class="col-2 rounded-circle avatar "
-      [ngStyle]="{
-        'background': 'url(' +avatar + ') no-repeat 0 0 / cover'        
-      }"
-    ></div>
-    <div class="col-5">
-    </div>
-  </div>
-       <!--    CONTENEDOR RANKING  -->
-<div class="row d-flex justify-content-center " >
+<div class="row container-fluid">
+  <div
+    id="avatar"
+    class="col-2 rounded-circle avatar"
+    [ngStyle]="{
+      background: 'url(' + avatar + ') no-repeat 0 0 / cover'
+    }"
+  ></div>
+  <div class="col-5"></div>
+</div>
+<!--    CONTENEDOR RANKING  -->
+<div class="row d-flex justify-content-center">
   <!--    CONTENEDOR RANKING /  FILTRO -->
 
-   <div class="row d-flex justify-content-center " style="height: 10vh;"></div>
-  
-   <div class="col-7" style="width: 60rem; margin-bottom: 5rem;"  >
-   <div class="row d-flex justify-content-center "style="height: 5vh;" >
-   <div class="col-5 bg-white " style="width: 70vw; height: 0vh;margin-bottom: 10%;">
-    <div class="row">
-  <div class="col-12 d-flex justify-content-center mb-4" style="margin-top: -2%;">
-   
-    <nav class="navbar navbar-expand-sm navbar-light bg-light">
-      <div class="container-fluid">
-         
-          <div id="navbarCollapse" class="collapse navbar-collapse">
-              <ul class="nav navbar-nav">
-                   <li class="nav-item dropdown">
-                      <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Messages</a>
-                      <div class="dropdown-menu"   *ngFor="let item of rankings">
-                          <a href="#" class="dropdown-item">{{item.nombre}}</a>                   
-                      </div>
-                  </li>
+  <div class="row d-flex justify-content-center" style="height: 10vh"></div>
+
+  <div class="col-7" style="margin-bottom: 5rem; min-width: 26em">
+    <div class="row d-flex justify-content-center" style="height: 5vh">
+      <div
+        class="col-5 bg-white"
+        style="width: 70vw; height: 0vh; margin-bottom: 10%"
+      >
+        <div class="row">
+          <div
+            class="col-12 d-flex justify-content-center mb-4"
+            style="margin-top: -2%"
+          >
+            <div class="dropdown">
+              <button
+                class="btn btn-secondary dropdown-toggle"
+                type="button"
+                id="dropdownMenuButton1"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Dropdown button
+              </button>
+              <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
               </ul>
-              
+            </div>
           </div>
+        </div>
       </div>
-  </nav>
-    
-  </div>
-  </div>
-  </div>
-  </div>
-  
-  <!--     CONTENEDOR RANKING / LISTA NOTIFICACIONES -->
-  <div class="container  " style="overflow-y: auto;height: 40vh;" >
-  <div   *ngFor="let item of rankings">
-  
-  <div class="row bg-black d-flex justify-content-center  rounded" style="width: 100%; height: 40vh;" >
-    
-   
-    <div class="row d-flex justify-content-center">
-    <div class="col d-flex justify-content-center"style="width: 5rem; height: 5rem;" ><img class="img-fluid home-hero" src="{{item.imagen}}" alt=""></div>
-  </div>
-  
-  <div class="row d-flex justify-content-center">
-    <div class="col-12 nombre-ranking d-flex justify-content-center">{{item.nombre}}</div>
-  
-  </div>
-    <div class="row ">
-      <div class="col nombre-ranking d-flex justify-content-center">{{item.tipo}}</div>
     </div>
-  
-    <div class="row " *ngIf="item.total!=null">
-      <div class="col nombre-ranking d-flex justify-content-center">Hay {{item.total}} personas</div>
+
+    <!--     CONTENEDOR RANKING / LISTA NOTIFICACIONES -->
+    <div class="container" style="overflow-y: auto; height: 40vh">
+      <div *ngFor="let item of listaRankings">
+        <div
+          class="row bg-black d-flex justify-content-center rounded"
+          style="width: 100%; height: 40vh"
+        >
+          <div class="row d-flex justify-content-center">
+            <div
+              class="col d-flex justify-content-center"
+              style="width: 5rem; height: 5rem"
+            >
+              <img class="img-fluid home-hero" src="{{ item.logo }}" alt="" />
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 nombre-ranking d-flex justify-content-center">
+              {{ item.description }}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col nombre-ranking d-flex justify-content-center">
+              {{ item.description }}
+            </div>
+          </div>
+
+          <div class="row" *ngIf="item.description != null">
+            <div class="col nombre-ranking d-flex justify-content-center">
+              Hay {{ item.description }} personas
+            </div>
+          </div>
+        </div>
+
+        <br />
+      </div>
     </div>
-  
-  
-  
-  </div>
-  
-  <br>
-  </div>
-  </div>
-  
-</div>
-
-<div class="col-2"></div>
-    <!--    CONTENEDOR DESTACADOS  -->
-<div class="col-3 " style="width: 30rem;">
-<!--    CONTENEDOR DESTACADOS /  FILTRO -->
-
- 
- <div class="row d-flex justify-content-center "style="height: 5vh;" >
- <div class="col-5 bg-white " style="width: 70vw; height: 0vh;margin-bottom: 50rem;">
-  <div class="row">
-<div class="col-12 d-flex justify-content-center mb-4">
-  <div class="col-1 filter-icons mx-2" style="cursor: pointer;"><img class="img-fluid home-hero" src="../../assets/png/world-outline-badged.png" alt=""></div>
-  <div class="col-1 filter-icons mx-2" style="cursor: pointer;" ><img class="img-fluid home-hero" src="../../assets/png/ranking.png" alt=""></div>
-  <div class="col-1 filter-icons mx-2" style="cursor: pointer;"><img class="img-fluid home-hero" src="../../assets/png/medal-outline.png" alt=""></div>
-</div>
-</div>
-</div>
-</div>
-<!--     CONTENEDOR DESTACADOS / LISTA NOTIFICACIONES -->
-<div class="container " style="overflow-y: auto;height: 40vh;" >
-<div   *ngFor="let item of rankings">
-
-<div class="row bg-black d-flex justify-content-center  rounded" style="width: 105%; height: 20vh;" >
-  
- 
-  <div class="row d-flex justify-content-center">
-  <div class="col d-flex justify-content-center"style="width: 5rem; height: 5rem;" ><img class="img-fluid home-hero" src="{{item.imagen}}" alt=""></div>
-</div>
-
-<div class="row d-flex justify-content-center">
-  <div class="col-12 nombre-ranking d-flex justify-content-center">{{item.nombre}}</div>
-
-</div>
-<br>
-  <div class="row ">
-    <div class="col nombre-ranking d-flex justify-content-center">{{item.tipo}}</div>
   </div>
 
-  <div class="row " *ngIf="item.total!=null">
-    <div class="col nombre-ranking d-flex justify-content-center">Hay {{item.total}} personas</div>
+  <div class="col-1"></div>
+  <!--    CONTENEDOR DESTACADOS  -->
+  <div class="col-3" style="">
+    <!--    CONTENEDOR DESTACADOS /  FILTRO -->
+    <div class="col-1"></div>
+    <div class="row d-flex justify-content-center" style="height: 5vh">
+      <div
+        class="col-5 bg-white"
+        style="width: 70vw; height: 0vh; margin-bottom: 50rem"
+      >
+        <div class="row">
+          <div class="col-12 d-flex justify-content-center mb-4">
+            <div class="col-1 filter-icons mx-2" style="cursor: pointer">
+              <img
+                class="img-fluid home-hero"
+                src="../../assets/png/world-outline-badged.png"
+                alt=""
+              />
+            </div>
+            <div class="col-1 filter-icons mx-2" style="cursor: pointer">
+              <img
+                class="img-fluid home-hero"
+                src="../../assets/png/ranking.png"
+                alt=""
+              />
+            </div>
+            <div class="col-1 filter-icons mx-2" style="cursor: pointer">
+              <img
+                class="img-fluid home-hero"
+                src="../../assets/png/medal-outline.png"
+                alt=""
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!--     CONTENEDOR DESTACADOS / LISTA NOTIFICACIONES -->
+    <div class="container" style="overflow-y: auto; height: 40vh">
+      <div *ngFor="let item of listaRankings">
+        <div
+          class="row bg-black d-flex justify-content-center rounded"
+          style="width: 105%; height: 20vh"
+        >
+          <div class="row d-flex justify-content-center">
+            <div
+              class="col d-flex justify-content-center"
+              style="width: 5rem; height: 5rem"
+            >
+              <img class="img-fluid home-hero" src="{{ item.logo }}" alt="" />
+            </div>
+          </div>
+
+          <div class="row d-flex justify-content-center">
+            <div class="col-12 nombre-ranking d-flex justify-content-center">
+              {{ item.name }}
+            </div>
+          </div>
+          <br />
+          <div class="row">
+            <div class="col nombre-ranking d-flex justify-content-center">
+              {{ item.description }}
+            </div>
+          </div>
+
+          <div class="row" *ngIf="item.description != null">
+            <div class="col nombre-ranking d-flex justify-content-center">
+              Hay {{ item.description }} personas
+            </div>
+          </div>
+        </div>
+
+        <br />
+      </div>
+    </div>
   </div>
-
-
-
 </div>
-
-<br>
-</div>
-</div>
-
- 
-
-</div>
-</div>
-  <div class="row" style="height: 48vh;"></div>
-
+<div class="row" style="height: 48vh"></div>
