Creacion de tabla con filtrado mediante importacion de libreria Angular MatTableModule Canvios para resolver bugs en : angulas.json,package-lock.json,package.json,app-routing.module.ts,app.module.ts

--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -33,3 +33,12 @@ height: 2rem;
 .ranking-container{
      padding-right: 0 !important;
 }
+
+table {
+  width: 100%;
+}
+
+.mat-form-field {
+  font-size: 14px;
+  width: 100%;
+}
