--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -33,10 +33,10 @@
   <div class="col-5"></div>
 </div>
 <!--    CONTENEDOR RANKING  -->
-<div class="row d-flex justify-content-center ">
+<div class="row d-flex justify-content-center">
   <!--    CONTENEDOR RANKING /  FILTRO -->
 
-  <div class="row d-flex justify-content-center " style="height: 10vh"></div>
+  <div class="row d-flex justify-content-center" style="height: 10vh"></div>
 
   <div class="col-7" style="margin-bottom: 5rem; min-width: 26em">
     <div class="row d-flex justify-content-center" style="height: 5vh">
@@ -45,10 +45,7 @@
         style="width: 70vw; height: 0vh; margin-bottom: 10%"
       >
         <div class="row">
-          <div
-            class="col-12 d-flex justify-content-center mb-4"
-            style="margin-top: -2%"
-          >
+          <div class="col-2 d-flex justify-content-center mb-4 select-ranking">
             <div class="dropdown">
               <button
                 class="btn btn-secondary dropdown-toggle"
@@ -73,49 +70,54 @@
     </div>
 
     <!--     CONTENEDOR RANKING / LISTA NOTIFICACIONES -->
-    <div class="container ranking-container" style="overflow-y: auto; height: 40vh">
+    <div
+      class="container ranking-container"
+      style="overflow-y: auto; height: 40vh"
+    >
       <div>
         <div
-          class="row  d-flex justify-content-center rounded"
+          class="row d-flex justify-content-center rounded"
           style="width: 100%"
         >
-         
+          <mat-form-field appearance="standard">
+            <mat-label>Filter</mat-label>
+            <input
+              matInput
+              (keyup)="applyFilter($event)"
+              placeholder="Ex. ium"
+              #input
+            />
+          </mat-form-field>
 
-        <mat-form-field appearance="standard">
-          <mat-label>Filter</mat-label>
-          <input matInput (keyup)="applyFilter($event)" placeholder="Ex. ium" #input>
-        </mat-form-field>
-        
-        <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
-        
-          <!--  Columna Posicion-->
-          <ng-container matColumnDef="position">
-            <th mat-header-cell *matHeaderCellDef> Posicion </th>
-            <td mat-cell *matCellDef="let element"> {{element.position}} </td>
-          </ng-container>
-        
-          <!--  Columna Nombre -->
-          <ng-container matColumnDef="name">
-            <th mat-header-cell *matHeaderCellDef> Nombre </th>
-            <td mat-cell *matCellDef="let element"> {{element.name}} </td>
-          </ng-container>
-        
-          <!-- Columna Apellido -->
-          <ng-container matColumnDef="lastName">
-            <th mat-header-cell *matHeaderCellDef> Apellido </th>
-            <td mat-cell *matCellDef="let element"> {{element.lastName}} </td>
-          </ng-container>
-        
-         
-        
-          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-        
-          <!-- Row shown when there is no matching data. -->
-          <tr class="mat-row" *matNoDataRow>
-            <td class="mat-cell" colspan="4">No hay nada que coincida con: "{{input.value}}"</td>
-          </tr>
-        </table>
+          <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+            <!--  Columna Posicion-->
+            <ng-container matColumnDef="position">
+              <th mat-header-cell *matHeaderCellDef>Posicion</th>
+              <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+            </ng-container>
+
+            <!--  Columna Nombre -->
+            <ng-container matColumnDef="name">
+              <th mat-header-cell *matHeaderCellDef>Nombre</th>
+              <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+            </ng-container>
+
+            <!-- Columna Apellido -->
+            <ng-container matColumnDef="lastName">
+              <th mat-header-cell *matHeaderCellDef>Apellido</th>
+              <td mat-cell *matCellDef="let element">{{ element.lastName }}</td>
+            </ng-container>
+
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+
+            <!-- Row shown when there is no matching data. -->
+            <tr class="mat-row" *matNoDataRow>
+              <td class="mat-cell" colspan="4">
+                No hay nada que coincida con: "{{ input.value }}"
+              </td>
+            </tr>
+          </table>
         </div>
 
         <br />
@@ -123,12 +125,14 @@
     </div>
   </div>
 
-
   <!--    CONTENEDOR DESTACADOS  -->
-  <div class="col-3" style="margin-bottom: 5rem; min-width: 26em;">
+  <div class="col-3" style="margin-bottom: 5rem; min-width: 26em">
     <!--    CONTENEDOR DESTACADOS /  FILTRO -->
- 
-    <div class="row d-flex justify-content-center  " style="height: 5vh">
+
+    <div
+      class="row d-flex justify-content-center filter-icons"
+      style="height: 5vh"
+    >
       <div
         class="col-5 bg-white"
         style="width: 70vw; height: 0vh; margin-bottom: 50rem"
@@ -140,6 +144,7 @@
                 class="img-fluid home-hero"
                 src="../../assets/png/world-outline-badged.png"
                 alt=""
+                (click)="destacadosSelected('todo')"
               />
             </div>
             <div class="col-1 filter-icons mx-2" style="cursor: pointer">
@@ -147,10 +152,12 @@
                 class="img-fluid home-hero"
                 src="../../assets/png/ranking.png"
                 alt=""
+                (click)="destacadosSelected('ranking')"
               />
             </div>
             <div class="col-1 filter-icons mx-2" style="cursor: pointer">
               <img
+                (click)="destacadosSelected('logro')"
                 class="img-fluid home-hero"
                 src="../../assets/png/medal-outline.png"
                 alt=""
@@ -162,35 +169,27 @@
     </div>
     <!--     CONTENEDOR DESTACADOS / LISTA NOTIFICACIONES -->
     <div class="container" style="overflow-y: auto; height: 40vh">
-      <div *ngFor="let item of listaRankings">
+      <div *ngFor="let item of listaRankings; &quot;info-destacados&quot;">
         <div
-          class="row bg-black d-flex justify-content-center rounded"
+          class="row d-flex justify-content-center rounded"
           style="width: 105%; height: 20vh"
+          *ngIf="filtroDestacados == item.tipo || filtroDestacados == 'todo'"
         >
           <div class="row d-flex justify-content-center">
-            <div
-              class="col d-flex justify-content-center"
-              style="width: 5rem; height: 5rem"
-            >
+            <div class="col d-flex justify-content-center icono-destacados">
               <img class="img-fluid home-hero" src="{{ item.logo }}" alt="" />
             </div>
           </div>
 
           <div class="row d-flex justify-content-center">
             <div class="col-12 nombre-ranking d-flex justify-content-center">
-              {{ item.name }}
+              Has ganado un insignia a {{ item.name }}
             </div>
           </div>
           <br />
           <div class="row">
             <div class="col nombre-ranking d-flex justify-content-center">
-              {{ item.description }}
-            </div>
-          </div>
-
-          <div class="row" *ngIf="item.description != null">
-            <div class="col nombre-ranking d-flex justify-content-center">
-              Hay {{ item.description }} personas
+              En el grupo {{ item.description }}
             </div>
           </div>
         </div>
