--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,7 @@
-<p>login works!</p>
+<div class="container-fluid position-absolute top-50 start-50 translate-middle bg-color">
+    <div class="container-fluid">
+        <div class="row justify-content-center">
+           container-fluid
+        </div>
+    </div>
+</div>
