--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,7 +1,25 @@
-<div class="container-fluid position-absolute top-50 start-50 translate-middle bg-color">
-    <div class="container-fluid">
-        <div class="row justify-content-center">
-           container-fluid
+<div class="container-fluid bg-color">
+    <div class="row position-relative align-items-center vh-100">
+        <div class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle">
+            <h3 class="text-light">Login</h3>
+            <div class="card login-card-height shadow border text-color">
+                <div class="card-body d-flex flex-column">
+                    <form>
+                        <label for="email">Email</label>
+                        <input id="email" type="text" class="form-control mb-3"/>
+                        <label for="email">Password</label>
+                        <input id="password" type="password" class="form-control mb-3"/>
+                        <div class="d-grid">
+                            <button class="btn btn-color text-light mb-3">Iniciar sesión</button>
+                        </div>
+                    </form>
+                    <div class="d-grid">
+                        <button class="btn btn-info text-light mb-3"><i class="bi bi-twitter"></i></button>
+                        <button class="btn btn-danger text-light mb-3" disabled><i class="bi bi-google"></i></button>
+                        <button class="btn btn-primary text-light" disabled><i class="bi bi-facebook"></i></button>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
