--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,4 +1,5 @@
 <!-- NAVBAR SUPERIOR -->
+
 <div
   class="d-flex align-items-center justify-content-between p-2 sticky-top bg-blur"
 >
@@ -78,6 +79,7 @@
         <div
           class="row d-flex justify-content-center rounded"
           style="width: 100%"
+          class="tabla-ranking"
         >
           <mat-form-field appearance="standard">
             <mat-label>Filter</mat-label>
