--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -7,5 +7,21 @@
 }
 
 .login-card-height {
-    height: 400px;
+    height: 25%;
+}
+
+.btn-circle {
+    width: 30px;
+    height: 30px;
+    padding: 6px 0px;
+    border-radius: 15px;
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.42857;
+    transition: 0.8s;
+}
+
+.btn-circle:hover {
+    background-color: var(--corp-color-one) !important;
+    transition: 0.3s;
 }
