--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,24 +1,42 @@
 <div class="container-fluid bg-color">
     <div class="row position-relative align-items-center vh-100">
-        <div class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle">
-            <h3 class="text-light">Login</h3>
+        <div class="login-card-width mx-auto position-absolute top-40 start-50 translate-middle" [@fadeIn]>
+            <h3 class="text-light">Insinia | Login</h3>
             <div class="card border-0 border-bottom border-5 border-color-hover login-card-height shadow border text-color">
-                <div class="card-body d-flex flex-column">
-                    <form>
-                        <label for="email">Email</label>
-                        <input id="email" type="text" placeholder="Introduce tu email" class="form-control text-color mb-3"/>
-                        <label for="email">Password</label>
-                        <input id="password" type="password" placeholder="Introduce tu contraseña" class="form-control text-color mb-3"/>
-                        <div class="d-grid">
-                            <button class="btn btn-color text-light mb-3">Iniciar sesión</button>
-                        </div>
-                        <hr class="my-1 border-danger">
-                        <div class="d-flex justify-content-center mt-3">
-                            <button class="btn bg-info btn-color text-light mx-1"><i class="bi bi-twitter"></i></button>
-                            <button class="btn bg-danger btn-color text-light mx-1" disabled><i class="bi bi-google"></i></button>
-                            <button class="btn bg-primary btn-color text-light mx-1" disabled><i class="bi bi-facebook"></i></button>
-                        </div>
-                    </form>
+                <form class="card-body d-flex flex-column" [formGroup]="loginForm" (ngSubmit)="logIn()">
+                    <label for="email">Email</label>
+                    <input formControlName="email" type="text" placeholder="Introduce tu email" class="form-control text-color"/>
+                    <div *ngIf="loginForm.controls.email.errors">
+                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.email.errors['pattern']"><i class="bi bi-x me-2"></i>El formato del email es incorrecto.</small>
+                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.email.touched && loginForm.controls.email.errors['required']"><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small>
+                    </div>
+                    <div *ngIf="!loginForm.controls.email.errors">
+                        <small [@fadeIn] class="text-success"><i class="bi bi-check-lg me-2"></i>El correo es válido.</small>
+                    </div>
+                    <label class="mt-3" for="password">Password</label>
+                    <input formControlName="password" type="password" placeholder="Introduce tu contraseña" class="form-control text-color"/>
+                    <div *ngIf="loginForm.controls.password.errors">
+                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.password.touched && loginForm.controls.password.errors['minlength']"><i class="bi bi-x me-2"></i>La longitud debe ser de 8 caracteres.</small>
+                        <small [@fadeIn] class="text-danger" *ngIf ="loginForm.controls.password.touched && loginForm.controls.password.errors['required']">><i class="bi bi-x me-2"></i>Este campo es obligatorio.</small>
+                    </div>
+                    <div *ngIf="!loginForm.controls.password.errors">
+                        <small [@fadeIn] class="text-success"><i class="bi bi-check-lg me-2"></i>La contraseña es válida.</small>
+                    </div>
+                    <div class="d-grid mt-3">
+                        <button type="submit" class="btn btn-color text-light mb-2" [disabled]="!loginForm.valid">Iniciar sesión</button>
+                    </div>
+                    <hr class="my-1 border-danger">
+                    <div class="d-flex justify-content-center mt-3">
+                        <button class="btn bg-info btn-color text-light mx-1"><i class="bi bi-twitter"></i></button>
+                        <button class="btn bg-danger btn-color text-light mx-1" disabled><i class="bi bi-google"></i></button>
+                        <button class="btn bg-primary btn-color text-light mx-1" disabled><i class="bi bi-facebook"></i></button>
+                    </div>
+                </form>
+                <div class="d-flex justify-content-center mb-3">
+                    <small>
+                        ¿Todavia no tienes una cuenta?
+                        <a class="link-color" routerLink="/register">Registrate aquí</a>
+                    </small>
                 </div>
             </div>
         </div>
