Cambios de estilo minimos

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -23,8 +23,7 @@
     </div>
     <div class="col-4 text-start align-self-center pt-5">
         <h1 class="text-color mb-2">Bienvenido a Inisnia</h1>
-        <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta</p>
-        <p class="text-color mb-1">definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
+        <p class="text-color mb-1">Somos un grupo de trabajo que ha desarrollado la herramienta definitiva para los Rankings. Tanto para uso escolar, casual y profesional.</p>
         <p class="text-small text-muted-color mb-3">Disponible para navegador</p>
         <a class="btn btn-color text-light py-sm-2 px-sm-3 rounded-pill shadow-sm me-2">Comienza</a>
         <a class="btn btn-outline-color py-sm-2 px-sm-3 rounded-pill shadow-sm">Contáctanos</a>
@@ -39,14 +38,13 @@
         <div class="card-body">
           <div class="row">
             <div class="col-6 ps-5 align-self-center">
-              <h2>Queremos solventar una necesidad</h2>
-              <h4>Por ello, ofrecemos lo siguiente:</h4>
+              <h2>Ofrecemos lo siguiente:</h2>
               <h5 class="mt-4">· Colaboración</h5>
               <h5>· Organización</h5>
               <h5>· Facilidad de uso</h5>
             </div>
             <div class="col-6 text-end">
-              <img class="img-fluid home-hero" src="../../assets/png/colaboration.png">
+              <img class="img-fluid home-hero-card" src="../../assets/png/colaboration.png">
             </div>
           </div>
         </div>
