Enviar datos de registro

--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -314,7 +314,7 @@
             <div class="col-5 nextBackButtons">
               <label for="inputDescription"></label>
               <button
-                (click)="submmit()"
+                (click)="sendRegister()"
                 type="submit"
                 class="btn btn-primary bi bi-send-check"
                 id="description"
