--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -1,19 +1,11 @@
 .bg-color-home-0 {
   background: rgb(109, 48, 243);
-  background: linear-gradient(
-    180deg,
-    rgba(109, 48, 243, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(180deg, rgba(109, 48, 243, 1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 .bg-color-home-inverted {
   background: rgb(109, 48, 243);
-  background: linear-gradient(
-    0deg,
-    rgba(109, 48, 243, 1) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(0deg, rgba(109, 48, 243, 1) 0%, rgba(0, 0, 0, 0) 100%);
 }
 
 .fullscreen-section {
@@ -42,7 +34,9 @@
 }
 
 .home-hero-card {
-  width: 300px;
+  margin: 1rem;
+  width: 250px;
+  height: 150px;
   transition: 0.7s;
 }
 
@@ -86,6 +80,10 @@
 .browser:hover {
   transition: 1s;
   transform: scale(1.3);
+}
+
+#section-land {
+  margin-top: 10%;
 }
 
 @media screen and (max-width: 1200px) {
